Ajout de header

--- a/TAYLOR_Heather_1_code_042022_index.html
+++ b/TAYLOR_Heather_1_code_042022_index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +8,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <link rel="stylesheet" href="TAYLOR_Heather_2_css_042022/normalize.css">
         <link rel="stylesheet" href="TAYLOR_Heather_2_css_042022/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/64ceb060e1.js" crossorigin="anonymous"></script>
     </head>
 <!--utiliser les balises sémantiques, i.e. main, header, nav, etc. -->
     <body>
+        <!--HEADER-->
+        <header>
+            <nav>
+                <img src="./TAYLOR_Heather_3_images_042022/logo/Booki.png" alt="Booki Logo">
+                <ul>
+                    <li>Hébergements</li>
+                    <li>Activités</li>
+                </ul>
+            </nav>
+        </header>
 
-        <h1>Test header</h1>
-        <p>test paragraph </p>
-        <p class="strong">test paragraph bold</p>
         
-        <script src="" async defer></script>
+       <!--<script src="" async defer></script>--> 
     </body>
 </html>
