--- a/TAYLOR_Heather_1_code_042022_index.html
+++ b/TAYLOR_Heather_1_code_042022_index.html
@@ -15,17 +15,247 @@
     </head>
 <!--utiliser les balises sémantiques, i.e. main, header, nav, etc. -->
     <body>
-        <!--HEADER-->
+        <!-- Header -->
         <header>
             <nav>
                 <img src="./TAYLOR_Heather_3_images_042022/logo/Booki.png" alt="Booki Logo">
                 <ul>
-                    <li>Hébergements</li>
-                    <li>Activités</li>
+                    <li>
+                        <a href="#">Hébergements</a>
+                    </li>
+                    <li>
+                        <a href="#">Activités</a>
+                    </li>
                 </ul>
             </nav>
         </header>
-
+        <!-- Main -->
+        <main>
+            <!-- Section: Trouvez votre hébergement pour des vacances de rêve -->
+            <section>
+                <div>
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <p>En plein centre ville ou en pleine nature</p>
+                </div>
+                <form>
+                    <i class="fa-solid fa-location-dot"></i>
+                    <input> <!-- input -->
+                    <button>Rechercher</button>
+                </form>
+                <div>
+                    <p>Filtres</p>
+                    <div>
+                        <i class="fa-solid fa-money-bill-wave"></i><p>Économique</p>
+                        <i class="fa-solid fa-child-reaching"></i><p>Familial</p>
+                        <i class="fa-solid fa-heart"></i><p>Romantique</p>
+                        <i class="fa-solid fa-dog"></i><p>Animaux autorisés</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fa-solid fa-info"></i>
+                    <p>Plus de 500 logements sont disponsibles dans cette ville</p>
+                </div>
+            </section>
+            <!-- Section: Hébergements à Marseille et Les plus populaires -->
+            <section>
+                <!-- Section: Hébergements à Marseille -->
+                <section>
+                    <div>
+                        <h2>Hébergements à Marseille</h2>
+                    </div>
+                    <div>
+                        <article>
+                            <div>
+                                <!--image-->
+                            </div>
+                            <div>
+                                <h3></h3>
+                                <h4></h4>
+                                <i><!--star rating icon--></i>
+                            </div>
+                        </article>
+                        <article>
+                            <div>
+                                <!--image-->
+                            </div>
+                            <div>
+                                <h3></h3>
+                                <h4></h4>
+                                <i><!--star rating icon--></i>
+                            </div>
+                        </article>
+                        <article>
+                            <div>
+                                <!--image-->
+                            </div>
+                            <div>
+                                <h3></h3>
+                                <h4></h4>
+                                <i><!--star rating icon--></i>
+                            </div>
+                        </article>
+                        <article>
+                            <div>
+                                <!--image-->
+                            </div>
+                            <div>
+                                <h3></h3>
+                                <h4></h4>
+                                <i><!--star rating icon--></i>
+                            </div>
+                        </article>
+                        <article>
+                            <div>
+                                <!--image-->
+                            </div>
+                            <div>
+                                <h3></h3>
+                                <h4></h4>
+                                <i><!--star rating icon--></i>
+                            </div>
+                        </article>
+                        <article>
+                            <div>
+                                <!--image-->
+                            </div>
+                            <div>
+                                <h3></h3>
+                                <h4></h4>
+                                <i><!--star rating icon--></i>
+                            </div>
+                        </article>
+                    </div>
+                    <div>
+                        <p>
+                            <a>Afficher plus</a>
+                        </p>
+                    </div>
+                </section>
+                <!-- Section: Les plus populaires -->
+                <section>
+                    <div>
+                        <h2>Les plus populaires</h2>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div>
+                        <article>
+                            <div>
+                                <!--image-->
+                            </div>
+                            <div>
+                                <h3></h3>
+                                <h4></h4>
+                                <br>
+                                <i><!--star rating icon--></i>
+                            </div>
+                        </article>
+                        <article>
+                            <div>
+                                <!--image-->
+                            </div>
+                            <div>
+                                <h3></h3>
+                                <h4></h4>
+                                <br>
+                                <i><!--star rating icon--></i>
+                            </div>
+                        </article>
+                        <article>
+                            <div>
+                                <!--image-->
+                            </div>
+                            <div>
+                                <h3></h3>
+                                <h4></h4>
+                                <br>
+                                <i><!--star rating icon--></i>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+            </section>
+            <!-- Section: Activités à Marseille -->
+            <section>
+                <div>
+                    <h2>Activités à Marseille</h2>
+                </div>
+                <div>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3></h3>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3></h3>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3></h3>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3></h3>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3></h3>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3></h3>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </main>
+        <!-- Footer -->
+        <footer>
+            <div>
+                <p>A propos</p>
+                <ul>
+                    <li><a></a></li>
+                    <li><a></a></li>
+                    <li><a></a></li>
+                </ul>
+            </div>
+            <div>
+                <p>Nos hébergements</p>
+                <ul>
+                    <li><a></a></li>
+                    <li><a></a></li>
+                </ul>
+            </div>
+            <div>
+                <p>Assistance</p>
+                <ul>
+                    <li><a></a></li>
+                    <li><a></a></li>
+                </ul>
+            </div>
+        </footer>
         
        <!--<script src="" async defer></script>--> 
     </body>
