--- a/TAYLOR_Heather_1_code_042022_index.html
+++ b/TAYLOR_Heather_1_code_042022_index.html
@@ -24,7 +24,7 @@
                         <a href="#">Hébergements</a>
                     </li>
                     <li>
-                        <a href="#">Activités</a>
+                        <a href="#activities-section">Activités</a>
                     </li>
                 </ul>
             </nav>
@@ -69,8 +69,8 @@
                                 <!--image-->
                             </div>
                             <div>
-                                <h3></h3>
-                                <h4></h4>
+                                <h3>Auberge La Cannebière</h3>
+                                <h4>Nuit à partir de 25€</h4>
                                 <i><!--star rating icon--></i>
                             </div>
                         </article>
@@ -79,8 +79,8 @@
                                 <!--image-->
                             </div>
                             <div>
-                                <h3></h3>
-                                <h4></h4>
+                                <h3>Hôtel du port</h3>
+                                <h4>Nuit à partir de 52€</h4>
                                 <i><!--star rating icon--></i>
                             </div>
                         </article>
@@ -89,8 +89,8 @@
                                 <!--image-->
                             </div>
                             <div>
-                                <h3></h3>
-                                <h4></h4>
+                                <h3>Hôtel Les mouettes</h3>
+                                <h4>Nuit à partir de 76€</h4>
                                 <i><!--star rating icon--></i>
                             </div>
                         </article>
@@ -99,8 +99,8 @@
                                 <!--image-->
                             </div>
                             <div>
-                                <h3></h3>
-                                <h4></h4>
+                                <h3>Hôtel de la mer</h3>
+                                <h4>Nuit à partir de 46€</h4>
                                 <i><!--star rating icon--></i>
                             </div>
                         </article>
@@ -109,8 +109,8 @@
                                 <!--image-->
                             </div>
                             <div>
-                                <h3></h3>
-                                <h4></h4>
+                                <h3>Auberge Le Panier</h3>
+                                <h4>Nuit à partir de 23€</h4>
                                 <i><!--star rating icon--></i>
                             </div>
                         </article>
@@ -119,8 +119,8 @@
                                 <!--image-->
                             </div>
                             <div>
-                                <h3></h3>
-                                <h4></h4>
+                                <h3>Hôtel chez Amina</h3>
+                                <h4>Nuit à partir de 96€</h4>
                                 <i><!--star rating icon--></i>
                             </div>
                         </article>
@@ -143,8 +143,8 @@
                                 <!--image-->
                             </div>
                             <div>
-                                <h3></h3>
-                                <h4></h4>
+                                <h3>Hôtel Le soleil du matin</h3>
+                                <h4>Nuit à partir de 128€</h4>
                                 <br>
                                 <i><!--star rating icon--></i>
                             </div>
@@ -154,8 +154,8 @@
                                 <!--image-->
                             </div>
                             <div>
-                                <h3></h3>
-                                <h4></h4>
+                                <h3>Au cœur de l'eau Chambres d'hôtes</h3>
+                                <h4>Nuit à partir de 71€</h4>
                                 <br>
                                 <i><!--star rating icon--></i>
                             </div>
@@ -165,8 +165,8 @@
                                 <!--image-->
                             </div>
                             <div>
-                                <h3></h3>
-                                <h4></h4>
+                                <h3>Hôtel Tout bleu et Blanc</h3>
+                                <h4>Nuit à partir de 68€</h4>
                                 <br>
                                 <i><!--star rating icon--></i>
                             </div>
@@ -175,7 +175,7 @@
                 </section>
             </section>
             <!-- Section: Activités à Marseille -->
-            <section>
+            <section id="activities-section">
                 <div>
                     <h2>Activités à Marseille</h2>
                 </div>
@@ -185,7 +185,7 @@
                             <!--image-->
                         </div>
                         <div>
-                            <h3></h3>
+                            <h3>Vieux Port</h3>
                         </div>
                     </article>
                     <article>
@@ -193,7 +193,7 @@
                             <!--image-->
                         </div>
                         <div>
-                            <h3></h3>
+                            <h3>Fort de Pomègues</h3>
                         </div>
                     </article>
                     <article>
@@ -201,7 +201,7 @@
                             <!--image-->
                         </div>
                         <div>
-                            <h3></h3>
+                            <h3>Îles du Frioul</h3>
                         </div>
                     </article>
                     <article>
@@ -209,7 +209,7 @@
                             <!--image-->
                         </div>
                         <div>
-                            <h3></h3>
+                            <h3>Parc National des Calanques</h3>
                         </div>
                     </article>
                     <article>
@@ -217,7 +217,7 @@
                             <!--image-->
                         </div>
                         <div>
-                            <h3></h3>
+                            <h3>Notre-Dame-de-la-Garde</h3>
                         </div>
                     </article>
                     <article>
@@ -225,7 +225,7 @@
                             <!--image-->
                         </div>
                         <div>
-                            <h3></h3>
+                            <h3>Parc Longchamp</h3>
                         </div>
                     </article>
                 </div>
@@ -236,23 +236,23 @@
             <div>
                 <p>A propos</p>
                 <ul>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
+                    <li><a>Fonctionnement du site</a></li>
+                    <li><a>Conditions générales de vente</a></li>
+                    <li><a>Données et confidentialité</a></li>
                 </ul>
             </div>
             <div>
                 <p>Nos hébergements</p>
                 <ul>
-                    <li><a></a></li>
-                    <li><a></a></li>
+                    <li><a>Charte qualité</a></li>
+                    <li><a>Soumettre votre hôtel</a></li>
                 </ul>
             </div>
             <div>
                 <p>Assistance</p>
                 <ul>
-                    <li><a></a></li>
-                    <li><a></a></li>
+                    <li><a>Centre d'aide</a></li>
+                    <li><a>Nous contacter</a></li>
                 </ul>
             </div>
         </footer>
