Ajout de fichier test.html pour séparer le texte de la structure du fichier index.html qui n'est pas en jeu. Style des cartes de la section hébergements mis en place.

--- a/TAYLOR_Heather_1_code_042022_index.html
+++ b/TAYLOR_Heather_1_code_042022_index.html
@@ -31,8 +31,7 @@
         </header>
         <!-- Main -->
         <main>
-            <!-- Section: Trouvez votre hébergement pour des vacances de rêve -->
-            <section>
+            <section> <!-- Section: Trouvez votre hébergement pour des vacances de rêve -->
                 <div>
                     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p>En plein centre ville ou en pleine nature</p>
@@ -56,69 +55,63 @@
                     <p>Plus de 500 logements sont disponsibles dans cette ville</p>
                 </div>
             </section>
-            <!-- Section: Hébergements à Marseille et Les plus populaires -->
-            <section>
-                <!-- Section: Hébergements à Marseille -->
-                <section>
+            <section> <!-- Section: Hébergements à Marseille et Les plus populaires -->
+                <section class="housing-section"> <!-- Section: Hébergements à Marseille -->
                     <div>
                         <h2>Hébergements à Marseille</h2>
                     </div>
-                    <div>
-                        <article>
-                            <div>
-                                <!--image-->
-                            </div>
-                            <div>
+                    <div class="housing-cards">            
+                        <article class="card"> 
+                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
+                                alt="room at Auberge La Cannebière">
+                            <div class="card-body">
                                 <h3>Auberge La Cannebière</h3>
                                 <h4>Nuit à partir de 25€</h4>
                                 <i><!--star rating icon--></i>
                             </div>
                         </article>
-                        <article>
-                            <div>
-                                <!--image-->
-                            </div>
-                            <div>
+                        <article class="card"> 
+                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" 
+                                alt="room at Hôtel du port">
+                            <div class="card-body">
                                 <h3>Hôtel du port</h3>
                                 <h4>Nuit à partir de 52€</h4>
                                 <i><!--star rating icon--></i>
                             </div>
                         </article>
-                        <article>
-                            <div>
-                                <!--image-->
-                            </div>
-                            <div>
+                        <article class="card"> 
+                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" 
+                                alt="room at Hôtel Les moulettes">
+                            <div class="card-body">
                                 <h3>Hôtel Les mouettes</h3>
                                 <h4>Nuit à partir de 76€</h4>
                                 <i><!--star rating icon--></i>
                             </div>
                         </article>
-                        <article>
-                            <div>
-                                <!--image-->
-                            </div>
-                            <div>
+                    </div>
+                    <div class="housing-cards">            
+                        <article class="card"> 
+                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" 
+                                alt="room at Hôtel de la mer">
+                            <div class="card-body">
                                 <h3>Hôtel de la mer</h3>
                                 <h4>Nuit à partir de 46€</h4>
                                 <i><!--star rating icon--></i>
                             </div>
                         </article>
-                        <article>
-                            <div>
-                                <!--image-->
-                            </div>
-                            <div>
+                        <article class="card"> 
+                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" 
+                                alt="room at Auberge Le Panier">
+                            <div class="card-body">
                                 <h3>Auberge Le Panier</h3>
                                 <h4>Nuit à partir de 23€</h4>
                                 <i><!--star rating icon--></i>
                             </div>
                         </article>
-                        <article>
-                            <div>
-                                <!--image-->
-                            </div>
-                            <div>
+                        <article class="card"> 
+                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" 
+                                alt="room at Hôtel chez Amina">
+                            <div class="card-body">
                                 <h3>Hôtel chez Amina</h3>
                                 <h4>Nuit à partir de 96€</h4>
                                 <i><!--star rating icon--></i>
@@ -130,133 +123,9 @@
                             <a>Afficher plus</a>
                         </p>
                     </div>
-                </section>
-                <!-- Section: Les plus populaires -->
-                <section>
-                    <div>
-                        <h2>Les plus populaires</h2>
-                        <i class="fa-solid fa-star"></i>
-                    </div>
-                    <div>
-                        <article>
-                            <div>
-                                <!--image-->
-                            </div>
-                            <div>
-                                <h3>Hôtel Le soleil du matin</h3>
-                                <h4>Nuit à partir de 128€</h4>
-                                <br>
-                                <i><!--star rating icon--></i>
-                            </div>
-                        </article>
-                        <article>
-                            <div>
-                                <!--image-->
-                            </div>
-                            <div>
-                                <h3>Au cœur de l'eau Chambres d'hôtes</h3>
-                                <h4>Nuit à partir de 71€</h4>
-                                <br>
-                                <i><!--star rating icon--></i>
-                            </div>
-                        </article>
-                        <article>
-                            <div>
-                                <!--image-->
-                            </div>
-                            <div>
-                                <h3>Hôtel Tout bleu et Blanc</h3>
-                                <h4>Nuit à partir de 68€</h4>
-                                <br>
-                                <i><!--star rating icon--></i>
-                            </div>
-                        </article>
-                    </div>
-                </section>
-            </section>
-            <!-- Section: Activités à Marseille -->
-            <section id="activities-section">
-                <div>
-                    <h2>Activités à Marseille</h2>
-                </div>
-                <div>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Vieux Port</h3>
-                        </div>
-                    </article>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Fort de Pomègues</h3>
-                        </div>
-                    </article>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Îles du Frioul</h3>
-                        </div>
-                    </article>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Parc National des Calanques</h3>
-                        </div>
-                    </article>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Notre-Dame-de-la-Garde</h3>
-                        </div>
-                    </article>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Parc Longchamp</h3>
-                        </div>
-                    </article>
-                </div>
-            </section>
+                </section>  
+            </section>     
         </main>
-        <!-- Footer -->
-        <footer>
-            <div>
-                <p>A propos</p>
-                <ul>
-                    <li><a>Fonctionnement du site</a></li>
-                    <li><a>Conditions générales de vente</a></li>
-                    <li><a>Données et confidentialité</a></li>
-                </ul>
-            </div>
-            <div>
-                <p>Nos hébergements</p>
-                <ul>
-                    <li><a>Charte qualité</a></li>
-                    <li><a>Soumettre votre hôtel</a></li>
-                </ul>
-            </div>
-            <div>
-                <p>Assistance</p>
-                <ul>
-                    <li><a>Centre d'aide</a></li>
-                    <li><a>Nous contacter</a></li>
-                </ul>
-            </div>
-        </footer>
-        
        <!--<script src="" async defer></script>--> 
     </body>
 </html>
