Déplacement de code html de testindex.html vers index.html, le code HTML pour la section "les plus populaires"

--- a/TAYLOR_Heather_1_code_042022_index.html
+++ b/TAYLOR_Heather_1_code_042022_index.html
@@ -55,11 +55,12 @@
                     <p>Plus de 500 logements sont disponsibles dans cette ville</p>
                 </div>
             </section>
-            <section> <!-- Section: Hébergements à Marseille et Les plus populaires -->
+            <section class="housing-and-popular-section"> <!-- Section: Hébergements à Marseille et Les plus populaires -->
                 <section class="housing-section"> <!-- Section: Hébergements à Marseille -->
                     <div>
                         <h2>Hébergements à Marseille</h2>
                     </div>
+                    <div class="housing-cards-container">
                     <div class="housing-cards">            
                         <article class="card"> 
                             <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
@@ -118,10 +119,58 @@
                             </div>
                         </article>
                     </div>
-                    <div>
+                </div>
+                    <div id="show-more">
                         <p>
                             <a>Afficher plus</a>
                         </p>
+                    </div>
+                </section>
+                <section class="popular-section"> <!-- Section: Les plus populaires -->
+                    <div>
+                        <h2>Les plus populaires</h2>
+                        <!--<i class="fa-solid fa-star"></i>-->
+                    </div>
+                    <div class="popular-cards">
+                        <article class="card-popular">
+
+                            <img class="card-image-popular" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                                alt="room at Hôtel Le soleil du matin">
+   
+                            <div class="card-body-popular">
+                                <span><h3>Hôtel Le soleil du matin</h3>
+                                <h4>Nuit à partir de 128€</h4>
+                                <br>
+                                <i><!--star rating icon--></i>
+                                </span>
+                            </div>
+                        </article>
+                        <article class="card-popular">
+
+                            <img class="card-image-popular" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                                alt="room at Au cœur de l'eau Chambres d'hôtes">
+
+                            <div class="card-body-popular">
+                                <span><h3>Au cœur de l'eau Chambres d'hôtes</h3>
+                                <h4>Nuit à partir de 71€</h4>
+                                <br>
+                                <i><!--star rating icon--></i>
+                                </span>
+                            </div>
+                        </article>
+                        <article class="card-popular">
+
+                            <img class="card-image-popular" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                                alt="room at Hôtel Tout bleu et Blanc">
+
+                            <div class="card-body-popular">
+                                <span><h3>Hôtel Tout bleu et Blanc</h3>
+                                <h4>Nuit à partir de 68€</h4>
+                                <br>
+                                <i><!--star rating icon--></i>
+                                </span>
+                            </div>
+                        </article>
                     </div>
                 </section>  
             </section>     
