--- a/TAYLOR_Heather_1_code_042022_index.html
+++ b/TAYLOR_Heather_1_code_042022_index.html
@@ -37,137 +37,181 @@
                     <p>En plein centre ville ou en pleine nature</p>
                 </div>
                 <form>
-                    <i class="fa-solid fa-location-dot"></i>
+                    <i class="fa fa-solid fa-location-dot"></i>
                     <input> <!-- input -->
                     <button>Rechercher</button>
                 </form>
-                <div>
+                <div class="filter-section">
                     <p>Filtres</p>
-                    <div>
-                        <i class="fa-solid fa-money-bill-wave"></i><p>Économique</p>
-                        <i class="fa-solid fa-child-reaching"></i><p>Familial</p>
-                        <i class="fa-solid fa-heart"></i><p>Romantique</p>
-                        <i class="fa-solid fa-dog"></i><p>Animaux autorisés</p>
+                    <div class="filter-icons">
+                        <i class="fa fa-solid fa-money-bill-wave blue-icon"></i><p>Économique</p>
+                        <i class="fa fa-solid fa-child blue-icon"></i><p>Familial</p>
+                        <i class="fa fa-solid fa-heart blue-icon"></i><p>Romantique</p>
+                        <i class="fa fa-solid fa-dog blue-icon"></i><p>Animaux autorisés</p>
                     </div>
                 </div>
                 <div>
-                    <i class="fa-solid fa-info"></i>
+                    <i class="fa fa-solid fa-info"></i>
                     <p>Plus de 500 logements sont disponsibles dans cette ville</p>
                 </div>
             </section>
             <section class="housing-and-popular-section"> <!-- Section: Hébergements à Marseille et Les plus populaires -->
                 <section class="housing-section"> <!-- Section: Hébergements à Marseille -->
-                    <div>
-                        <h2>Hébergements à Marseille</h2>
-                    </div>
-                    <div class="housing-cards-container">
-                    <div class="housing-cards">            
-                        <article class="card"> 
-                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
-                                alt="room at Auberge La Cannebière">
-                            <div class="card-body">
-                                <h3>Auberge La Cannebière</h3>
-                                <h4>Nuit à partir de 25€</h4>
-                                <i><!--star rating icon--></i>
+                    <div class="housing-section-padding">
+                        <div>
+                            <h2>Hébergements à Marseille</h2>
+                        </div>
+                        <div class="housing-cards-container">
+                            <div class="housing-cards">            
+                                <article class="card"> 
+                                    <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
+                                        alt="room at Auberge La Cannebière">
+                                    <div class="card-body">
+                                        <h3>Auberge La Cannebière</h3>
+                                        <h4>Nuit à partir de 25€</h4>
+                                        <span>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star unchecked-star"></i>
+                                        </span>
+                                    </div>
+                                </article>
+                                <article class="card"> 
+                                    <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" 
+                                        alt="room at Hôtel du port">
+                                    <div class="card-body">
+                                        <h3>Hôtel du port</h3>
+                                        <h4>Nuit à partir de 52€</h4>
+                                        <span>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                        </span>
+                                    </div>
+                                </article>
+                                <article class="card"> 
+                                    <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" 
+                                        alt="room at Hôtel Les moulettes">
+                                    <div class="card-body">
+                                        <h3>Hôtel Les mouettes</h3>
+                                        <h4>Nuit à partir de 76€</h4>
+                                        <span>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star unchecked-star"></i>
+                                        </span>
+                                    </div>
+                                </article>
                             </div>
-                        </article>
-                        <article class="card"> 
-                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" 
-                                alt="room at Hôtel du port">
-                            <div class="card-body">
-                                <h3>Hôtel du port</h3>
-                                <h4>Nuit à partir de 52€</h4>
-                                <i><!--star rating icon--></i>
+                            <div class="housing-cards">            
+                                <article class="card"> 
+                                    <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" 
+                                        alt="room at Hôtel de la mer">
+                                    <div class="card-body">
+                                        <h3>Hôtel de la mer</h3>
+                                        <h4>Nuit à partir de 46€</h4>
+                                        <span>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star unchecked-star"></i>
+                                            <i class="fa fa-solid fa-star unchecked-star"></i>
+                                        </span>
+                                    </div>
+                                </article>
+                                <article class="card"> 
+                                    <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" 
+                                        alt="room at Auberge Le Panier">
+                                    <div class="card-body">
+                                        <h3>Auberge Le Panier</h3>
+                                        <h4>Nuit à partir de 23€</h4>
+                                        <span>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star unchecked-star"></i>
+                                        </span>
+                                    </div>
+                                </article>
+                                <article class="card"> 
+                                    <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" 
+                                        alt="room at Hôtel chez Amina">
+                                    <div class="card-body">
+                                        <h3>Hôtel chez Amina</h3>
+                                        <h4>Nuit à partir de 96€</h4>
+                                        <span>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                            <i class="fa fa-solid fa-star checked-star"></i>
+                                        </span>
+                                    </div>
+                                </article>
                             </div>
-                        </article>
-                        <article class="card"> 
-                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" 
-                                alt="room at Hôtel Les moulettes">
-                            <div class="card-body">
-                                <h3>Hôtel Les mouettes</h3>
-                                <h4>Nuit à partir de 76€</h4>
-                                <i><!--star rating icon--></i>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="housing-cards">            
-                        <article class="card"> 
-                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" 
-                                alt="room at Hôtel de la mer">
-                            <div class="card-body">
-                                <h3>Hôtel de la mer</h3>
-                                <h4>Nuit à partir de 46€</h4>
-                                <i><!--star rating icon--></i>
-                            </div>
-                        </article>
-                        <article class="card"> 
-                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" 
-                                alt="room at Auberge Le Panier">
-                            <div class="card-body">
-                                <h3>Auberge Le Panier</h3>
-                                <h4>Nuit à partir de 23€</h4>
-                                <i><!--star rating icon--></i>
-                            </div>
-                        </article>
-                        <article class="card"> 
-                            <img class="card-image" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" 
-                                alt="room at Hôtel chez Amina">
-                            <div class="card-body">
-                                <h3>Hôtel chez Amina</h3>
-                                <h4>Nuit à partir de 96€</h4>
-                                <i><!--star rating icon--></i>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-                    <div id="show-more">
-                        <p>
-                            <a>Afficher plus</a>
-                        </p>
+                        </div>
+                        <div id="show-more">
+                            <p>
+                                <a>Afficher plus</a>
+                            </p>
+                        </div>
                     </div>
                 </section>
                 <section class="popular-section"> <!-- Section: Les plus populaires -->
-                    <div>
-                        <h2>Les plus populaires</h2>
-                        <!--<i class="fa-solid fa-star"></i>-->
-                    </div>
-                    <div class="popular-cards">
+                        <div id="popular-heading">
+                            <h2>Les plus populaires</h2>
+                            <i class="fa fa-solid fa-star"></i>
+                        </div>
+                    <div class="popular-cards">    
                         <article class="card-popular">
-
                             <img class="card-image-popular" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                                 alt="room at Hôtel Le soleil du matin">
-   
                             <div class="card-body-popular">
-                                <span><h3>Hôtel Le soleil du matin</h3>
+                                <h3>Hôtel Le soleil du matin</h3>
                                 <h4>Nuit à partir de 128€</h4>
-                                <br>
-                                <i><!--star rating icon--></i>
+                                <span>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
                                 </span>
                             </div>
                         </article>
                         <article class="card-popular">
-
                             <img class="card-image-popular" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                                 alt="room at Au cœur de l'eau Chambres d'hôtes">
-
                             <div class="card-body-popular">
-                                <span><h3>Au cœur de l'eau Chambres d'hôtes</h3>
+                                <h3>Au cœur de l'eau Chambres d'hôtes</h3>
                                 <h4>Nuit à partir de 71€</h4>
-                                <br>
-                                <i><!--star rating icon--></i>
+                                <span>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star unchecked-star"></i>
                                 </span>
                             </div>
                         </article>
                         <article class="card-popular">
-
                             <img class="card-image-popular" src="./TAYLOR_Heather_3_images_042022/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                                 alt="room at Hôtel Tout bleu et Blanc">
-
                             <div class="card-body-popular">
-                                <span><h3>Hôtel Tout bleu et Blanc</h3>
+                                <h3>Hôtel Tout bleu et Blanc</h3>
                                 <h4>Nuit à partir de 68€</h4>
-                                <br>
-                                <i><!--star rating icon--></i>
+                                <span>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star checked-star"></i>
+                                    <i class="fa fa-solid fa-star unchecked-star"></i>
                                 </span>
                             </div>
                         </article>
