changé le nom de fichier html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <form>
                     <i class="fa fa-solid fa-location-dot"></i>
                     <input> <!-- input -->
-                    <button>Rechercher</button>
+                    <button>Rechercher</button> <!--<i class="fa-solid fa-magnifying-glass"></i>-->
                 </form>
                 <div class="filter-section">
                     <p>Filtres</p>
