--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 <div class="filter-section">
                     <p>Filtres</p>
                     <div class="filter-icons">
-                        <i class="fa fa-solid fa-money-bill-wave blue-icon"></i><p>Économique</p>
-                        <i class="fa fa-solid fa-child blue-icon"></i><p>Familial</p>
-                        <i class="fa fa-solid fa-heart blue-icon"></i><p>Romantique</p>
-                        <i class="fa fa-solid fa-dog blue-icon"></i><p>Animaux autorisés</p>
+                        <p><i class="fa fa-solid fa-money-bill-wave blue-icon"></i>Économique</p>
+                        <p><i class="fa fa-solid fa-child blue-icon"></i>Familial</p>
+                        <p><i class="fa fa-solid fa-heart blue-icon"></i>Romantique</p>
+                        <p><i class="fa fa-solid fa-dog blue-icon"></i>Animaux autorisés</p>
                     </div>
                 </div>
                 <div>
@@ -217,7 +217,63 @@
                         </article>
                     </div>
                 </section>  
-            </section>     
+            </section>
+            <!-- Section: Activités à Marseille -->
+            <section id="activities-section">
+                <div>
+                    <h2>Activités à Marseille</h2>
+                </div>
+                <div>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3>Vieux Port</h3>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3>Fort de Pomègues</h3>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3>Îles du Frioul</h3>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3>Parc National des Calanques</h3>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3>Notre-Dame-de-la-Garde</h3>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <!--image-->
+                        </div>
+                        <div>
+                            <h3>Parc Longchamp</h3>
+                        </div>
+                    </article>
+                </div>
+            </section> 
         </main>
        <!--<script src="" async defer></script>--> 
     </body>
