Changements pour la validation W3C: HTML- enlevé "px" pour les images changé les "div" à "span" sur les boutons dans la partie "filters"

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Header -->
         <header>
             <nav>
-                <div class="logo-container"><img class="logo" src="./TAYLOR_Heather_3_images_042022/logo/Booki.png" alt="Booki Logo" width="191px" height="90px"></div>
+                <div class="logo-container"><img class="logo" src="./TAYLOR_Heather_3_images_042022/logo/Booki.png" alt="Booki Logo" width="191" height="90"></div>
                 <ul>
                     <li>
                         <a href="#housing-section">Hébergements</a>
@@ -36,7 +36,7 @@
                     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p>En plein centre ville ou en pleine nature</p>
                 </div>
-                <form class="form" action="">
+                <form class="form">
                     <span class="map-icon"><i class="fa fa-solid fa-map-marker-alt"></i></span>
                     <input type="search" onfocus="this.placeholder=''" placeholder="Marseille, France" name="search">
                     <button class="desktop-button" type="submit">Rechercher</button>
@@ -46,36 +46,36 @@
                     <p class="filter-heading">Filtres</p>
                     <div class="filter-buttons-container">
                         <button type="button" class="filter-button">
-                            <div class="circle">
+                            <span class="circle">
                                 <i class="fa fa-fw fa-money-bill-wave filter-icon"></i>
-                            </div>
-                            <div class="filter-button-text">
+                            </span>
+                            <span class="filter-button-text">
                                 <p>Économique</p>
-                            </div>
+                            </span>
                         </button>
                         <button type="button" class="filter-button">
-                            <div class="circle">
+                            <span class="circle">
                                 <i class="fa fa-fw fa-child filter-icon"></i>
-                            </div>
-                            <div class="filter-button-text">
+                            </span>
+                            <span class="filter-button-text">
                                 <p>Familial</p>
-                            </div>
+                            </span>
                         </button>
                         <button type="button" class="filter-button">
-                            <div class="circle">
+                            <span class="circle">
                                 <i class="fa fa-fw fa-heart filter-icon"></i>
-                            </div>
-                            <div class="filter-button-text">
+                            </span>
+                            <span class="filter-button-text">
                                 <p>Romantique</p>
-                            </div>
+                            </span>
                         </button>
                         <button type="button" class="filter-button">
-                            <div class="circle">
+                            <span class="circle">
                                 <i class="fa fa-fw fa-dog filter-icon"></i>
-                            </div>
-                            <div class="filter-button-text">
+                            </span>
+                            <span class="filter-button-text">
                                 <p>Animaux autorisés</p>
-                            </div>
+                            </span>
                         </button>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                     <div class="results-message"><p>Plus de 500 logements sont disponsibles dans cette ville</p></div>
                 </div>
             </section>
-            <section class="housing-and-popular-section"> <!-- Section: Hébergements à Marseille et Les plus populaires -->
+            <div class="housing-and-popular-section"> <!-- Section: Hébergements à Marseille et Les plus populaires -->
                 <section id="housing-section" class="housing-section"> <!-- Section: Hébergements à Marseille -->
                         <div class="housing-heading">
                             <h2>Hébergements à Marseille</h2>
@@ -322,7 +322,7 @@
                         </article>
                     </div>
                 </section>  
-            </section>
+            </div>
             <!-- Section: Activités à Marseille -->
             <section id="activities-section">
                 <div>
