HTML de "activities" mise à jour (avec les images, divs, et a href) CSS de "footer" ajouté

--- a/index.html
+++ b/index.html
@@ -46,36 +46,19 @@
                     <p class="filter-heading">Filtres</p>
                     <div class="filter-buttons-container">
                         <button type="button" class="filter-button">
-                            <span class="circle">
-                                <i class="fa fa-fw fa-money-bill-wave filter-icon"></i>
-                            </span>
-                            <span class="filter-button-text">
-                                <p>Économique</p>
-                            </span>
+                            <span class="circle"><i class="fa fa-fw fa-money-bill-wave filter-icon"></i></span>
+                            <span class="filter-button-text">Économique</span>
                         </button>
                         <button type="button" class="filter-button">
-                            <span class="circle">
-                                <i class="fa fa-fw fa-child filter-icon"></i>
-                            </span>
-                            <span class="filter-button-text">
-                                <p>Familial</p>
-                            </span>
+                            <span class="circle"><i class="fa fa-fw fa-child filter-icon"></i></span>
+                            <span class="filter-button-text">Familial</span>
                         </button>
                         <button type="button" class="filter-button">
-                            <span class="circle">
-                                <i class="fa fa-fw fa-heart filter-icon"></i>
-                            </span>
-                            <span class="filter-button-text">
-                                <p>Romantique</p>
-                            </span>
+                            <span class="circle"><i class="fa fa-fw fa-heart filter-icon"></i></span>
+                            <span class="filter-button-text">Romantique</span>
                         </button>
-                        <button type="button" class="filter-button">
-                            <span class="circle">
-                                <i class="fa fa-fw fa-dog filter-icon"></i>
-                            </span>
-                            <span class="filter-button-text">
-                                <p>Animaux autorisés</p>
-                            </span>
+                        <button type="button" class="filter-button"><span class="circle"><i class="fa fa-fw fa-dog filter-icon"></i></span>
+                            <span class="filter-button-text">Animaux autorisés</span>
                         </button>
                     </div>
                 </div>
@@ -328,58 +311,108 @@
                 <div>
                     <h2>Activités à Marseille</h2>
                 </div>
-                <div>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Vieux Port</h3>
-                        </div>
-                    </article>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Fort de Pomègues</h3>
-                        </div>
-                    </article>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Îles du Frioul</h3>
-                        </div>
-                    </article>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Parc National des Calanques</h3>
-                        </div>
-                    </article>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Notre-Dame-de-la-Garde</h3>
-                        </div>
-                    </article>
-                    <article>
-                        <div>
-                            <!--image-->
-                        </div>
-                        <div>
-                            <h3>Parc Longchamp</h3>
-                        </div>
-                    </article>
+                <div class="activities">
+                    <div class="activities-one-card">
+                        <article>
+                            <a href="#">
+                                <div>
+                                    <img src="./TAYLOR_Heather_3_images_042022/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                                    alt="Vieux Port">
+                                </div>
+                                <div>
+                                    <h3>Vieux Port</h3>
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="activities-two-cards">
+                        <article>
+                            <a href="#">
+                                <div>
+                                    <img src="./TAYLOR_Heather_3_images_042022/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                                alt="Fort de Pomègues">
+                                </div>
+                                <div>
+                                    <h3>Fort de Pomègues</h3>
+                                </div>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="#">
+                                <div>
+                                    <img src="./TAYLOR_Heather_3_images_042022/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                                alt="Îles du Frioul">
+                                </div>
+                                <div>
+                                    <h3>Îles du Frioul</h3>
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="activities-one-card">      
+                        <article>
+                            <a href="#">
+                                <div>
+                                    <img src="./TAYLOR_Heather_3_images_042022/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                                    alt="Parc National des Calanques">
+                                </div>
+                                <div>
+                                    <h3>Parc National des Calanques</h3>
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="activities-two-cards">
+                        <article>
+                            <a href="#">
+                                <div>
+                                    <img src="./TAYLOR_Heather_3_images_042022/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                                    alt="Notre-Dame-de-la-Garde">
+                                </div>
+                                <div>
+                                    <h3>Notre-Dame-de-la-Garde</h3>
+                                </div>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="#">
+                                <div>
+                                    <img src="./TAYLOR_Heather_3_images_042022/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                                    alt="Parc Longchamp">
+                                </div>
+                                <div>
+                                    <h3>Parc Longchamp</h3>
+                                </div>
+                            </a>
+                        </article>
+                    </div>  
                 </div>
             </section> 
         </main>
-       <!--<script src="" async defer></script>--> 
+        <!-- Footer -->
+        <footer>
+            <div>
+                <p>A propos</p>
+                <ul>
+                    <li><a>Fonctionnement du site</a></li>
+                    <li><a>Conditions générales de vente</a></li>
+                    <li><a>Données et confidentialité</a></li>
+                </ul>
+            </div>
+            <div>
+                <p>Nos hébergements</p>
+                <ul>
+                    <li><a>Charte qualité</a></li>
+                    <li><a>Soumettre votre hôtel</a></li>
+                </ul>
+            </div>
+            <div>
+                <p>Assistance</p>
+                <ul>
+                    <li><a>Centre d'aide</a></li>
+                    <li><a>Nous contacter</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
